fix(tests): add fixes for errors during tests execution refs: TMI-318