@@ -32,6 +32,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
 
+        <!-- Surefire JVM args (JaCoCo removed, keep hook) -->
+        <surefire.argLine></surefire.argLine>
+
         <!-- Internal dependencies -->
         <sm-domain.version>2.0.0-SNAPSHOT</sm-domain.version>
 
@@ -60,11 +63,8 @@
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <aspectj.version>1.9.24</aspectj.version>
         <allure-maven.version>2.8</allure-maven.version>
-        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>
 
-        <!-- Build configuration -->
-        <jacoco.reports.dir>${project.build.directory}</jacoco.reports.dir>
         <forkCount>8</forkCount>
 
         <!-- SonarQube properties -->
@@ -72,7 +72,6 @@
         <sonar.java.binaries>target</sonar.java.binaries>
         <sonar.language>java</sonar.language>
         <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
-        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
         <sonar.inclusions>src/main/java/**</sonar.inclusions>
     </properties>
@@ -213,6 +212,14 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -239,61 +246,24 @@
                             <includeTags>${tag}</includeTags>
                         </properties>
                         <includes>
-                            <include>**/*Test*.java</include>
+                            <include>**/*Test.java</include>
+                            <include>**/*Tests.java</include>
+                            <include>**/*IT.java</include>
+                            <include>**/*IntegrationTest.java</include>
                         </includes>
                         <argLine>
-                            @{argLine}
+                            ${surefire.argLine}
+                            -XX:+EnableDynamicAgentLoading
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
                         </argLine>
-                        <systemProperties>
-                            <property>
-                                <name>allure.results.directory</name>
-                                <value>${project.basedir}/allure-results</value>
-                            </property>
-                            <property>
-                                <name>org.aspectj.dump.directory</name>
-                                <value>${project.build.directory}/ajcore</value>
-                            </property>
-                            <property>
-                                <name>junit.jupiter.extensions.autodetection.enabled</name>
-                                <value>true</value>
-                            </property>
-                        </systemProperties>
+                        <systemPropertyVariables>
+                            <allure.results.directory>${project.basedir}/allure-results</allure.results.directory>
+                            <org.aspectj.dump.directory>${project.build.directory}/ajcore</org.aspectj.dump.directory>
+                            <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
+                        </systemPropertyVariables>
                         <reportFormat>plain</reportFormat>
                     </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>${jacoco-maven-plugin.version}</version>
-                    <configuration>
-                        <destFile>${jacoco.reports.dir}/jacoco.exec</destFile>
-                        <dataFile>${jacoco.reports.dir}/jacoco.exec</dataFile>
-                        <output>file</output>
-                        <append>true</append>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>pre-unit-test</id>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                            <configuration>
-                                <destFile>${jacoco.reports.dir}/jacoco.exec</destFile>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>post-unit-test</id>
-                            <phase>test</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                            <configuration>
-                                <dataFile>${jacoco.reports.dir}/jacoco.exec</dataFile>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
 
                 <plugin>
@@ -320,10 +290,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
